# xbio

./: .Rbuildignore  .gitignore  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE  README.Rmd  README.md
R/: annohub.R  bridge-.R  bridge-gsea-prerank.R  db-.R  db-go.R  db-kegg.R  enricher-.R  enricher-gsea-prerank.R  extendr-wrappers.R  geneset-class.R  geneset-methods.R  genesets-class.R  genesets-generic.R  genesets-gs.R  genesets-io.R  genesets-method.R  genesets-methods.R  genesets.R  gsea-.R  gsea-prerank.R  gsea.R  repr-genesets.R  repr-matrix.R  repr-metrics.R  tbl-class.R  utils-S7.R  utils-file.R  utils.R  xbio-package.R  zzz.R
man/: GSEAPrerank.Rd  annohub.Rd  bridge.Rd  enricher-package.Rd  fea-package.Rd  geneset.Rd  genesets.Rd  gs_clean.Rd  gs_filter.Rd  gs_ids.Rd  gs_map.Rd  gsea_gene_permutate.Rd  kegg_genesets.Rd  kegg_pathway.Rd  keggdb.Rd  keggdb_find.Rd  keggdb_get.Rd  repr_genesets.Rd  repr_matrix.Rd  repr_metrics.Rd  xbio-package.Rd  xbio.Rd
src/: Makevars.in  Makevars.win.in  enricher-win.def  entrypoint.c  xbio-win.def
src/rust/: Cargo.toml
src/rust/src/: lib.rs
src/rust/src/gsea/: algorithm.rs  input.rs  mod.rs  permutate_gene.rs  ssgsea.rs
tests/: testthat.R
tests/testthat/: test-genesets-class.R
tests/testthat/_snaps/: genesets-class.md
