[package]
name = 'enricher'
publish = false
version = '0.1.0'
edition = '2021'
rust-version = '1.65'

[lib]
crate-type = [ 'staticlib' ]
name = 'enricher'

[dependencies]
extendr-api = { version = "0.8.0", features = [ "result_list" ] }
rand = {version = "*"}
rand_chacha = {version = "*"}
rayon = "1.10"
